<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/yellow"
    tools:context="Controller.QCMActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="-53dp"
        tools:layout_editor_absoluteY="-81dp">

        <ImageView
            android:id="@+id/im4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/back_black"
            tools:ignore="InvalidId"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="10dp"/>

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="30dp"
            android:layout_marginBottom="15dp"
            android:fontFamily="sans-serif"
            android:gravity="center"
            android:text="QUESTIONS"
            android:textColor="@color/white"
            android:textSize="36sp"
            android:textStyle="bold"
            android:background="@color/black"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingLeft="20dp">

            <TextView
                android:id="@+id/txt3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/temperature"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:textStyle="bold" />

            <RadioGroup
                android:id="@+id/rg1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                    <RadioButton
                        android:id="@+id/rb1rg1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="OUI"
                        android:textColor="@color/teal_700"/>
                    <RadioButton
                        android:id="@+id/rb2rg1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="NON"
                        android:textColor="@color/teal_700"/>
                </LinearLayout>
            </RadioGroup>


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingLeft="20dp">

            <TextView
                android:id="@+id/txt17"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/tousse"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:textStyle="bold"/>

        <RadioGroup
            android:id="@+id/rg2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <RadioButton
                    android:id="@+id/rb1rg2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="OUI"
                    android:textColor="@color/teal_700"/>
                <RadioButton
                    android:id="@+id/rb2rg2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="NON"
                    android:textColor="@color/teal_700"/>
            </LinearLayout>
        </RadioGroup>


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingLeft="20dp">

            <TextView
                android:id="@+id/textView18"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/tete"
                android:textColor="#000"
                android:textSize="18sp"
                android:textStyle="bold"/>

            <RadioGroup
                android:id="@+id/rg3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                    <RadioButton
                        android:id="@+id/rb1rg3"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="OUI"
                        android:textColor="@color/teal_700"/>
                    <RadioButton
                        android:id="@+id/rb2rg3"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="NON"
                        android:textColor="@color/teal_700"/>
                </LinearLayout>
            </RadioGroup>


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingLeft="20dp">

            <TextView
                android:id="@+id/textView19"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/gorge"
                android:textColor="#000"
                android:textSize="18sp"
                android:textStyle="bold"/>

            <RadioGroup
                android:id="@+id/rg4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                    <RadioButton
                        android:id="@+id/rb1rg4"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="OUI"
                        android:textColor="@color/teal_700"/>
                    <RadioButton
                        android:id="@+id/rb2rg4"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="NON"
                        android:textColor="@color/teal_700"/>
                </LinearLayout>
            </RadioGroup>


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingLeft="20dp">

            <TextView
                android:id="@+id/textView16"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/rhume"
                android:textColor="#000"
                android:textSize="18sp"
                android:textStyle="bold"/>

            <RadioGroup
                android:id="@+id/rg5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                    <RadioButton
                        android:id="@+id/rb1rg5"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="OUI"
                        android:textColor="@color/teal_700"/>
                    <RadioButton
                        android:id="@+id/rb2rg5"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="NON"
                        android:textColor="@color/teal_700"/>
                </LinearLayout>
            </RadioGroup>


        </LinearLayout>

        <Button
            android:id="@+id/btn_suivant"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="25dp"
            android:gravity="center_horizontal"
            android:padding="15dp"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:text="suivant"
            android:textColor="@color/white"
            android:textSize="24sp"
            app:backgroundTint="@color/black"
            app:cornerRadius="10dp"/>


    </LinearLayout>

</LinearLayout>